--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Odin-Recipes</title>
 </head>
 <body>
-    <h1>Worlds best Lasagna!</h1>
-    <p><a href="./recipes/lasagna.html" target="_blank" rel="noopener noopener nofollower">Lasagna Recipe</a></p>
+    <h1>Worlds best Recipes!</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noopener nofollower">Lasagna Recipe</a></li>
+        <li><a href="./recipes/bolognese.html" target="_blank" rel="noopener noopener nofollower">Bolognese Recipe</a></li>
+        <li><a href="./recipes/sandwich.html" target="_blank" rel="noopener noopener nofollower">Kimchi Chicken Melt Sandwich</a></li>
+    </ul>
 </body>
 </html>
