--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Image -->
-<img src="../images/lasagna" alt="Recipe image"><p>Source: Photo: Allrecipes Magazine</p>
+<img src="../images/lasagna.webp" alt="Recipe image"><p>Source: Photo: Allrecipes Magazine</p>
 
 <!-- Description -->
 <h2>Description</h2>
