--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Worlds best Recipes!</h1>
+    <p>
+        <img src="./images/salad.webp" alt="Recipe image"><p>Source: Photo: Allrecipes Magazine</p>
+    </p>
     <ul>
         <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noopener nofollower">Lasagna Recipe</a></li>
         <li><a href="./recipes/bolognese.html" target="_blank" rel="noopener noopener nofollower">Bolognese Recipe</a></li>
