modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <img src="./images/salad.webp" alt="Recipe image"><p>Source: Photo: Allrecipes Magazine</p>
     </p>
     <ul>
-        <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noopener nofollower">Lasagna Recipe</a></li>
-        <li><a href="./recipes/bolognese.html" target="_blank" rel="noopener noopener nofollower">Bolognese Recipe</a></li>
-        <li><a href="./recipes/sandwich.html" target="_blank" rel="noopener noopener nofollower">Kimchi Chicken Melt Sandwich</a></li>
+        <li><a href="./recipes/lasagna.html" target="_blank" rel="noopener noopener nofollow">Lasagna Recipe</a></li>
+        <li><a href="./recipes/bolognese.html" target="_blank" rel="noopener noopener nofollow">Bolognese Recipe</a></li>
+        <li><a href="./recipes/sandwich.html" target="_blank" rel="noopener noopener nofollow">Kimchi Chicken Melt Sandwich</a></li>
     </ul>
 </body>
 </html>
